[project]
name = "tte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Elliot Hill", email = "elliot.douglas.hill@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.10.0",
]

[project.scripts]
tte = "tte:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
